examples/test/testpolicy17239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17239
  namespace: namespace2
spec:
  podSelector:
    matchLabels:
      key20: value2
      key31: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value22
          key11: value42
          key16: value8
      podSelector:
        matchLabels:
          key45: value8
          key18: value16
          key48: value49
